force-app/main/default/objects/Opportunity/fields/Addendum_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Addendum_End_Date__c</fullName>
    <label>Addendum End Date</label>
    <type>Date</type>
</CustomField>