force-app/main/default/objects/Opportunity/fields/Approval_for_Upload_Contract__c.field-meta.xml
<CustomField>
    <fullName>Approval_for_Upload_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval for Upload Contract</label>
    <type>Checkbox</type>
</CustomField>