force-app/main/default/objects/Opportunity/fields/Client_Category__c.field-meta.xml
<CustomField>
    <fullName>Client_Category__c</fullName>
    <label>Client Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-tail</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Brands/Enterprise</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
            <value>
                <fullName>Long Tail Clients</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
                <label>International</label>
            </value>
            <value>
                <fullName>Long Tail/SMB</fullName>
            </value>
            <value>
                <fullName>Aggregator/Co-loader</fullName>
            </value>
            <value>
                <fullName>FAPSSe</fullName>
            </value>
            <value>
                <fullName>BFSI</fullName>
            </value>
            <value>
                <fullName>Other Customers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Key Accounts (Ecommerce)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>