force-app/main/default/objects/Opportunity/fields/Client_Other_Service__c.field-meta.xml
<CustomField>
    <fullName>Client_Other_Service__c</fullName>
    <label>Client Other Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Website</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Paytm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>