force-app/main/default/objects/Opportunity/fields/Clients_Total_Volume_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Clients_Total_Volume_Monthly__c</fullName>
    <description>SF - 276</description>
    <label>Clients Total Volume (Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>