force-app/main/default/objects/Opportunity/fields/Co_Loader__c.field-meta.xml
<CustomField>
    <fullName>Co_Loader__c</fullName>
    <label>Co Loader</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>