force-app/main/default/objects/Opportunity/fields/COD_BU_Head_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>COD_BU_Head_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Regarding SF -244</description>
    <label>COD BU Head Approval Required</label>
    <type>Checkbox</type>
</CustomField>