force-app/main/default/objects/Opportunity/fields/COD_Director_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>COD_Director_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COD Director Approval Required</label>
    <type>Checkbox</type>
</CustomField>