force-app/main/default/objects/Opportunity/fields/Contribution_Margin__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Margin__c</fullName>
    <label>Contribution Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>