force-app/main/default/objects/Opportunity/fields/Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Opportunity</label>
    <type>Checkbox</type>
</CustomField>