force-app/main/default/objects/Opportunity/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <formula>Owner.Director__r.FirstName   &amp; &quot; &quot;  &amp;   Owner.Director__r.LastName</formula>
    <label>Director</label>
    <type>Text</type>
</CustomField>