force-app/main/default/objects/Opportunity/fields/Forward_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Forward_Incremental__c</fullName>
    <defaultValue>CASE($RecordType.DeveloperName, &#39;Express_Shipping&#39;, 500, &#39;Standard_Shipping&#39;, 500,500)</defaultValue>
    <label>Forward Incremental (in grams)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>