force-app/main/default/objects/Opportunity/fields/Insurance_Required__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Required</label>
    <type>Checkbox</type>
</CustomField>