force-app/main/default/objects/Opportunity/fields/Inventory_Size__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Size__c</fullName>
    <label>Inventory Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>