force-app/main/default/objects/Opportunity/fields/Invoicing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Mode__c</fullName>
    <label>Invoicing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COD Net-off</fullName>
            </value>
            <value>
                <fullName>Delhivery Miles</fullName>
            </value>
            <value>
                <fullName>Monthly Invoiced</fullName>
            </value>
            <value>
                <fullName>Post Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>