force-app/main/default/objects/Opportunity/fields/Is_Account_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account Inactive</label>
    <type>Checkbox</type>
</CustomField>