force-app/main/default/objects/Opportunity/fields/Is_cont_not_available_for_FTL__c.field-meta.xml
<CustomField>
    <fullName>Is_cont_not_available_for_FTL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is contract not available for FTL</label>
    <type>Checkbox</type>
</CustomField>