force-app/main/default/objects/Opportunity/fields/Maximum_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Discount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Maximum Discount</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>