force-app/main/default/objects/Opportunity/fields/Monthly_Expected_Waybill_Saas__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expected_Waybill_Saas__c</fullName>
    <label>Monthly Expected Waybill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>