force-app/main/default/objects/Opportunity/fields/New_B2B_Pricing__c.field-meta.xml
<CustomField>
    <fullName>New_B2B_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New B2B Pricing</label>
    <type>Checkbox</type>
</CustomField>