force-app/main/default/objects/Opportunity/fields/No_Of_Trips_For_Delhivery_Monthly__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Trips_For_Delhivery_Monthly__c</fullName>
    <label>No. Of Trips For Delhivery ( Monthly )</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>