force-app/main/default/objects/Opportunity/fields/Offline_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Offline_Agreement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Offline Agreement</label>
    <type>Checkbox</type>
</CustomField>