force-app/main/default/objects/Opportunity/fields/OnBoarding_Form_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>OnBoarding_Form_Receive_Date__c</fullName>
    <label>OnBoarding Form Receive Date</label>
    <type>DateTime</type>
</CustomField>