force-app/main/default/objects/Opportunity/fields/Onboarding_form_submitted__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_form_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding form submitted</label>
    <type>Checkbox</type>
</CustomField>