force-app/main/default/objects/Opportunity/fields/Operating_Account__c.field-meta.xml
<CustomField>
    <fullName>Operating_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>