force-app/main/default/objects/Opportunity/fields/Orion_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Orion_Client_Id__c</fullName>
    <label>Orion Client Id</label>
    <type>TextArea</type>
</CustomField>