force-app/main/default/objects/Opportunity/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>GST Form Filled By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Delhivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>