force-app/main/default/objects/Opportunity/fields/Registered_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Name__c</fullName>
    <label>Registered Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>