force-app/main/default/objects/Opportunity/fields/RTO__c.field-meta.xml
<CustomField>
    <fullName>RTO__c</fullName>
    <defaultValue>CASE($RecordType.DeveloperName, &#39;Express_Shipping&#39;, 500, &#39;Standard_Shipping&#39;, 1000,500)</defaultValue>
    <label>RTO (in grams)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>