force-app/main/default/objects/Opportunity/fields/Service_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Account Created</label>
    <type>Checkbox</type>
</CustomField>