force-app/main/default/objects/Opportunity/fields/SF_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_ID__c</fullName>
    <displayFormat>SF-{0000000}</displayFormat>
    <label>SF ID</label>
    <type>AutoNumber</type>
</CustomField>