force-app/main/default/objects/Opportunity/fields/Sites_Listed_On__c.field-meta.xml
<CustomField>
    <fullName>Sites_Listed_On__c</fullName>
    <label>Sites Listed On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>