force-app/main/default/objects/Opportunity/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Client_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Large Horizontals</fullName>
            </value>
            <value>
                <fullName>Vertical Leaders</fullName>
            </value>
            <value>
                <fullName>Long tail e-tailers and platform sellers</fullName>
            </value>
            <value>
                <fullName>Marketplace Vendors</fullName>
            </value>
            <value>
                <fullName>Independent SMBs</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>FMCG</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health,Pharma</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Office Products</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Mail-Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>