force-app/main/default/objects/Opportunity/fields/Sub_Category_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_Formula__c</fullName>
    <formula>IF ( ISPICKVAL( Sub_Category__c , &quot;&quot; ) , TEXT (Account.Sub_Category__c ) ,TEXT (Sub_Category__c) )</formula>
    <label>Sub Category</label>
    <type>Text</type>
</CustomField>