force-app/main/default/objects/Opportunity/fields/Volume_Potential__c.field-meta.xml
<CustomField>
    <fullName>Volume_Potential__c</fullName>
    <description>What is the Number of shipments that the client does every Month.
SF - 276</description>
    <label>Delhivery&#39;s Expected Volume (Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>