force-app/main/default/objects/Opportunity/fields/Volume_Potential_Tonnes_Month__c.field-meta.xml
<CustomField>
    <fullName>Volume_Potential_Tonnes_Month__c</fullName>
    <description>SF - 276</description>
    <label>Delhivery&#39;s Expected Tonnage (Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>